--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
       <section id="main-bio">
-        <h2>My Name is cory</h2>
+        <h2>My Name is Cory</h2>
 
         <img id="bio-image" src="https://placehold.it/200x200" alt="My Name" />
 
