--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img id="bio-image" src="https://placehold.it/200x200" alt="My Name" />
 
         <p>
-          I am a full-stack web developer!
+          I am a full-stack web developer! ARRRRRRR
         </p>
       </section>
 
